use idiomatic java code